--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Tasks <span class="blue"> List</span></h1>
     <h3 class="addnewtask" >
-         <a href="indexpage2.html"><img src="plus.png" width="20px" height="20px" class="plus"  ></a><p class="textaddnewtask">  Add New Task</p></h3><br><br><br>
+         <a href="indexpage2.html" class="taskbutton"><img src="plus.png" width="20px" height="20px" class="plus"  ></a><p class="textaddnewtask">  Add New Task</p></h3><br><br><br>
     <div class="card-container">
         <div class="cards">
             <h3> <a href="indexpage3.html" style="text-decoration: none;color: #00A5EC;"> To Paris </a></h3>
